# FreeRTOS-Example-Repo

./: .gitignore  CMakeLists.txt  CMakePresets.json
drivers/: CMakeLists.txt
drivers/powers/: CMakeLists.txt
drivers/powers/inc/: sqrt.h  square.h
drivers/powers/src/: sqrt.c  square.c
drivers/simpleOperations/: CMakeLists.txt
drivers/simpleOperations/inc/: add.h  divide.h  multiply.h  sub.h
drivers/simpleOperations/src/: divide.c  multiply.c  sub.c
freeRtos_1/: .gitignore
freeRtos_1/src/: freertos_hello_world.c  lscript.ld
ldscripts/: dummy_baremetal.ld
main/: CMakeLists.txt
main/src/: main.c
tools/cmake/: toolchain-baremetal.cmake  toolchain-linux-arm.cmake  toolchain-ubuntu.cmake
tools/doxygen/settings/: Doxyfile.in
